@@ -1,13 +1,13 @@
 defaults:
-  install_options: --source=http://gemcutter.org --source=http://gems.rubyforge.org --include-dependencies --no-ri --no-rdoc
+  install_options: --source=http://gemcutter.org --include-dependencies --no-ri --no-rdoc
 gems:
 - name: acts_as_fu
   version: 0.0.5
 - name: activesupport
   version: >= 2.2.2
 - name: rspec
-  version: >= 1.2.8
+  version: >= 1.3.0
 - name: fixjour
-  version: 0.2.0
+  version: 0.3.0
 - name: jeweler
-  version: 1.2.1
+  version: 1.4.0
